Fix build issues on Windows